@@ -1,3 +1,10 @@
+2015-12-03  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[graph] Unravel blending.
+
+	* graph/gblender.c (gblender_reset_key, gblender_reset_channel_key):
+	Entrust optimizations to modern compilers, remove unused variables.
+
 2015-11-30  Werner Lemberg  <wl@gnu.org>
 
 	[graph] Initialize local variables after checking channel change.
